# openvr-input-recorder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CNAME  LICENSE  README.md  _config.yml
installer/: installer.nsi
messages/: generate.sh  ovr_device.proto  recording.proto
src/: args.h  main.cc  main.cpp
